2004-03-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: added missing gcompris-edit.desktop
	* boards/billard.xml.in: changed board plugin name
	* boards/chronos/board3_0.xml.in: fixed car invention date
	* boards/chronos/board3_2.xml.in: fixed car invention date
	* boards/chronos/board3_4.xml.in: fixed car invention date
	* boards/geography/Makefile.am: added france_region
	* boards/geography/board5_0.xml.in: France region created by J.Ph. Ayanides
	* boards/geography/france_region/alsace.png: France region created by J.Ph. Ayanides
	* boards/geography/france_region/aquitaine.png: -
	* boards/geography/france_region/auvergne.png: -
	* boards/geography/france_region/basse-normandie.png: -
	* boards/geography/france_region/bourgogne.png: -
	* boards/geography/france_region/bretagne.png: -
	* boards/geography/france_region/centre.png: -
	* boards/geography/france_region/champagne-ardenne.png: -
	* boards/geography/france_region/corse.png: -
	* boards/geography/france_region/france-regions.png: -
	* boards/geography/france_region/franche-conte.png: -
	* boards/geography/france_region/haute-normandie.png: -
	* boards/geography/france_region/ile-de-france.png: -
	* boards/geography/france_region/languedoc-roussillon.png: -
	* boards/geography/france_region/limousin.png: -
	* boards/geography/france_region/lorraine.png: -
	* boards/geography/france_region/midi-pyrenees.png: -
	* boards/geography/france_region/nord-pas-de-calais.png: -
	* boards/geography/france_region/pays-de-la-loire.png: -
	* boards/geography/france_region/picardie.png: -
	* boards/geography/france_region/poitou-charentes.png: -
	* boards/geography/france_region/provence-alpes-cote_d_azur.png: -
	* boards/geography/france_region/rhone-alpes.png: -
	* boards/melody.xml.in: changed board plugin name
	* boards/pythontest.xml.in: changed board plugin name
	* boards/redraw.xml.in: changed board plugin name
	* boards/redraw_symmetrical.xml.in: changed board plugin name