@@ -1,3 +1,7 @@
+2004-03-24  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/gletters.c: (get_charset), (key_press): fixed bug where the correct letter was not found
+
 2004-03-13  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* Makefile.am: added missing gcompris-edit.desktop
